# triple_contact_planner

./: .gitignore  CMakeLists.txt  package.xml  qp_one_body.py  qp_solve_test.yaml  qp_two_body.py  setup.py  start_static_eq_grp.yaml
include/triple_contact_planner/contact/: contact.h
include/triple_contact_planner/contact_model/: contact_model.h  stefan_model.h
include/triple_contact_planner/robot_dynamics/: dexterous_robot_model.h  robot_dynamics_model.h
include/triple_contact_planner/solver/: contact_optimization.h  contact_optimization_solver.h  qp_solver.h
include/triple_contact_planner/solver/constraint/: constraint_base.h  constraint_equality.h  constraint_inequality.h
scripts/: make_bottom1_top2.py  make_bottom2_top1.py  make_bottom_point.py  make_permutation.py  make_top2_bottom1.py  make_top_point.py
src/: example.cpp  main.cpp
src/contact/: contact.cpp
src/contact_model/: contact_model.cpp
src/python/triple_contact_planner/: __init__.py
src/solver/: contact_optimization.cpp  contact_optimization_solver.cpp  qp_solver.cpp
src/solver/constraint/: constraint_base.cpp  constraint_equality.cpp  constraint_inequality.cpp
src/wrapper/: python_wrapping.cpp
yaml/permutation/: bottom_all.yaml  bottom_permutation.yaml  top_all.yaml
